--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,6 @@
     "name": "ScarletsFiction/LittleYoutube",
     "description": "LittleYoutube is a library for retrieving youtube data with PHP script",
     "require": {
-        "php": "^5.4",
+        "php": "^5.4"
     }
 }
