Change package name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "ScarletsFiction/LittleYoutube",
+    "name": "littleyoutube",
     "description": "LittleYoutube is a library for retrieving youtube data with PHP script",
     "require": {
         "php": "^5.4"
