--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,10 @@
 language: php
-php:
-  - '5.4'
-  - '5.5'
-  - '5.6'
-  - '7.0'
-  - '7.1'
-sudo: enabled
+matrix:
+    include:
+        - php: 5.4
+        - php: 5.5
+        - php: 5.6
+        - php: 7.0
+        - php: 7.1
+sudo: false
+dist: trusty
