--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,8 @@ matrix:
         - php: 5.4
         - php: 5.5
         - php: 5.6
-        - php: 7.0
-        - php: 7.1
 sudo: false
 dist: trusty
 before_install: composer self-update
-install: composer install
-script: vendor/bin/phpunit
+before_script: composer install
+script: phpunit -- configuration phpunit.xml --coverage-text
