Fix composer autoload

--- a/composer.json
+++ b/composer.json
@@ -7,9 +7,9 @@
 	"license": "GPL",
 	"keywords": ["youtube", "php", "library", "littleyoutube"],
     "autoload": {
-        "psr-4": {
-            "LittleYoutube\\": "LittleYoutube.php"
-        }
+        "classmap": [
+            "LittleYoutube.php"
+        ]
     },
 	"authors": [
 		{"name": "StefansArya"}
