--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "require": {
         "php": ">=5.4"
     },
-	"license": "GPL",
+	"license": "GPL-2.0",
 	"keywords": ["youtube", "php", "library", "littleyoutube"],
     "autoload": {
         "classmap": [
@@ -13,5 +13,6 @@
     },
 	"authors": [
 		{"name": "StefansArya"}
-	]
+	],
+    "version": "1.0.0"
 }
